[gd_scene load_steps=6 format=3 uid="uid://bh7fuo8fhlo7g"]

[ext_resource type="Texture2D" uid="uid://y7q8og2k5wy5" path="res://art/fish/bigf.png" id="1_0ayv6"]
[ext_resource type="Script" uid="uid://bdw4yv67ag7u4" path="res://fishingSystem/rewardUI/fish_reward_ui.gd" id="1_2fq2s"]
[ext_resource type="Texture2D" uid="uid://33gwbj54isjt" path="res://art/ui/grungu.png" id="1_rxadu"]
[ext_resource type="Script" uid="uid://bwlvlpb66kptb" path="res://fishingSystem/rewardUI/gacha.gd" id="2_b8bsb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxadu"]
bg_color = Color(0.133333, 0.137255, 0.137255, 0.454902)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[node name="fish_reward_ui" type="CanvasLayer"]
visible = false
script = ExtResource("1_2fq2s")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rxadu")
script = ExtResource("2_b8bsb")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("1_rxadu")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="name" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "名前:"

[node name="name2" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Grayscale Minnow"

[node name="PanelContainer2" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="diameter" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "寸法:"

[node name="cm" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "7 cm"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="weight" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "重さ:"

[node name="kg" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0.4 kg"

[node name="PanelContainer3" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer3" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer3/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "レアリティ:"

[node name="rarity" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer3/VBoxContainer2"]
layout_mode = 2
text = "Common"

[node name="PanelContainer4" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="MarginContainer3" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer4/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="price" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer4/MarginContainer3/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "価格:"

[node name="iko" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer4/MarginContainer3/VBoxContainer2"]
layout_mode = 2
text = "500 IKO"

[node name="Button" type="Button" parent="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/outline_size = 6
text = "Accept"

[node name="PanelContainer2" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
texture = ExtResource("1_rxadu")
expand_mode = 1
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_0ayv6")
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 6
text = "A hardy, adaptable fish. Small, but perfectly suited to the endless cavities of the megastructure."

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
